# milvus-haystack

./: .gitignore  CONTRIBUTING.md  OWNERS  README.md  pyproject.toml
.github/: mergify.yml
.github/workflows/: main.yml  test.yml
src/milvus_haystack/: __about__.py  __init__.py  document_store.py  filter_utils.py  filters.py  function.py  milvus.py  milvus_embedding_retriever.py
src/milvus_haystack/utils/: constant.py
tests/: test_document_store.py  test_embedding_retriever.py  test_filters.py  test_milvus.py
